<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>seek_thermal</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for Seek camera SDK v4.3</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="erin@robotics88.com">erin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/beginner_tutorials</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>camera_calibration_parsers</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>tf2_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
